Changes to qusp gateway theme. Removed the top banner.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background: #fff !important;
+	/*background: #fff !important;*/
     width: 100%;
     background: url(../img/csbg-banner.png) no-repeat center center;
     background-size: cover;
