--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,20 @@ body{
 		margin-bottom: 10px;
 }
 
+.button-sra {
+    background: linear-gradient(to right, #99ccff ,  #e6e6e6);
+    border-width: 1px;
+    border-color: #e6e6e6;
+    border-radius: 10px;
+    color: White;
+    border-style: solid;
+    padding: 15px 25px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
 /*
 	Custom Styling Begins [Searching SRA Theme changes JIRA - Airavata -2706]
  */
