--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body{
 }
 
 .button-sra {
-    background: linear-gradient(to right, #99ccff ,  #e6e6e6);
+    background: linear-gradient(to right, #99ccff ,  #A9A9A9(; /*#e6e6e6);*/
     border-width: 1px;
     border-color: #e6e6e6;
     border-radius: 10px;
