--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ body{
 } */
 .hero-unit {
     width: 100%;
-    background: url(../img/csbg-banner.png) no-repeat center center;
+    background: url(../img/new-csbg-banner.png) no-repeat center center;
     background-size: cover;
 }
 .hero-unit h1 {
