--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,19 +63,7 @@ body{
 .panel-body > .form-group, .queue-block, .compute-resource-summary-page, .wall-time-summary-page, .cpu-count-summary-page, .node-count-summary-page, .queue-summary-page {
 	display: none;
 }
-/*
-.compute-resource-summary {
-	display:none;
-} */
 
-/*
-	Custom Styling Ends
-*/
-/* .lsu-top-banner {
-	width: 100%;
-  background-size:cover;
-	height:235px;
-} */
 .hero-unit {
     width: 100%;
     background: url(../img/new-csbg-banner.png) no-repeat center center;
@@ -91,8 +79,23 @@ body{
 .hero-unit h2 {
     font-size: 25px;
     color: #FFFFFF;
-
 }
+.container {
+    position: relative;
+    max-width: 800px; /* Maximum width */
+    margin: 0 auto; /* Center it */
+}
+
+.container .content {
+    position: absolute; /* Position the background text */
+    bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1; /* Grey text */
+    width: 100%; /* Full width */
+    padding: 20px; /* Some padding */
+}
+
 .fill{width:100%;height:350px;background-position:center;background-size:cover;
 }
 
