--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ body{
 /*
 	Custom Styling Begins [Searching SRA Theme changes JIRA - Airavata -2706]
  */
+/*
 .theme-header > .navbar > .container-fluid > .navbar-header {
 	margin-left: -17px;
 	margin-top: -15px;
@@ -55,7 +56,7 @@ body{
 	color: #29638D;
 	background-color: #29638D;
 }
-
+*/
 .credits {
 	margin-top: 100px;
 }
@@ -69,6 +70,7 @@ body{
     background: url(../img/new-csbg-banner.png) no-repeat center center;
     background-size: cover;
 }
+/*
 .hero-unit h1 {
     color: #FFFFFF;
     font-size: 60px;
@@ -80,6 +82,7 @@ body{
     font-size: 25px;
     color: #FFFFFF;
 }
+*/
 
 .fill{width:100%;height:350px;background-position:center;background-size:cover;
 }
