Changed separator line color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ body{
     height: 4px;
     margin-left: auto;
     margin-right: auto;
-    color:#FF0066;
+    color:#002e5e;
     border: 0 none;
 }
 
