removed the compute resource from hiding.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,13 @@ body{
 .credits {
 	margin-top: 100px;
 }
-
+/*
 .panel-body > .form-group, .queue-block, .compute-resource-summary-page, .wall-time-summary-page, .cpu-count-summary-page, .node-count-summary-page, .queue-summary-page {
 	display: none;
+}
+*/
+.panel-body > .queue-block, .compute-resource-summary-page, .wall-time-summary-page, .cpu-count-summary-page, .node-count-summary-page, .queue-summary-page {
+    display: none;
 }
 
 .hero-unit {
