--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ body{
 
 .hero-unit {
     width: 100%;
-    background: url(../img/new-csbg-banner.png) no-repeat center center;
+    background: url(../img/QuSP.png) no-repeat center center;
     background-size: cover;
 }
 /*
