--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ body{
     width: 100%;
     background: url(../img/QuSP.png) no-repeat center center;
     background-size: cover;
+    background-position: bottom;
 }
 /*
 .hero-unit h1 {
